# Projeto-Agente-AI

./: .gitignore  README.md  pyproject.toml
src/: agent.py  agente.py  config.py  fichas_de_treino.py  main.py  teste_fallback.py
